src/main/java/com/example/hunters_league/web/errors/participation/ParticipationNotFoundException.java
package com.example.hunters_league.web.errors.participation;

public class ParticipationNotFoundException extends RuntimeException {
    public ParticipationNotFoundException(String participationNotFound) {
        super(participationNotFound);
    }
}
